  Then 'I should see' do |text|
    text.should == "A string\n  that \"indents\"\nand spans\nseveral lines\n"
  end

The triple quotes are used to define the start and end of a string, and it also defines what gets stripped away
in the inside string. If the triple quotes are indented 4 spaces, then the text within will have the 4 first
spaces removed too.

=== New features
* Added support for Welsh (improvements welcome) (Joseph Wilk)
* Added --quiet option to hide all development aid output when using Pretty formatter (#69 Joseph Wilk)
* Added --no-snippets option to hide snippets for pending steps when using Pretty formatter (#69 Joseph Wilk)
* Added error messages concerning cucumber.yml. (#70 Ben Mabey)
* Added Autotest support - work in progress... (Peter Jaros)
* Added new --exclude option (Bryan Helkamp)
* Added new --scenario option (Peter Jaros)
* Renamed common_webrat.rb to common_webrat_steps.rb (Ben Mabey)
* Added new feature[:feature_path] task (Roman Gonzalez)
* Added support for Polish (Joseph Wilk)
* Support specifying multiple formatters and multiple outputs (#47 Joseph Wilk)
* Added support for Japanese. (Kakutani Shintaro)
* Added support for Texan (improvements welcome). (Aslak Hellesøy)

=== Bugfixes
* Scenario without a body shouldn't show up as complete (#63 Josh Knowles)
* Fixed bug where utf-8 strings where breaking comment alighments. (#79 Joseph Wilk)
* Fixed next_column_index not resetting after large tables (#60, Barry Mitchelson)
* The HTML formatter was rendering everything twice. Cannot invoke visit_feature on formatters in executor (#72 Joseph Wilk)
* Row Scenarios need to support pending? in order for the Profile formatter to work (Joseph Wilk)
* Snippets are not shown for steps which already have a step definition (#65 Joseph Wilk)
* Prevent feature/scenario/pending step comments from containing '//' when running features by specifying a directory with a trailing '/' (Joseph Wilk)