@@ -23,6 +23,7 @@ in the inside string. If the triple quotes are indented 4 spaces, then the text 
 spaces removed too.
 
 === New features
+* Step definition without a block will be treated as pending (#64 Joseph Wilk)
 * Added support for Welsh (improvements welcome) (Joseph Wilk)
 * Added --quiet option to hide all development aid output when using Pretty formatter (#69 Joseph Wilk)
 * Added --no-snippets option to hide snippets for pending steps when using Pretty formatter (#69 Joseph Wilk)
